fixed session issues with angular

--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,7 @@
 	<script type="text/javascript" src='./js/factories/PageFactory.js'></script>
 	<script type="text/javascript" src='./js/factories/TopicFactory.js'></script>
 	<script type="text/javascript" src='./js/factories/UserFactory.js'></script>
+	<script type="text/javascript" src='./js/factories/ServerFactory.js'></script>
 	<script type="text/javascript" src='./js/directives.js'></script>
 </head>
 <body ng-view=''></body>
