--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 
 	<!-- pre loaded normalize, bootstrap, & font-awesome -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"/>
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/materialize.min.css">
 	<link href="http://vjs.zencdn.net/4.11/video-js.css" rel="stylesheet">
 	<!-- jquery, angular, angular-routes, angular-messages, Angular-routes-css, HTML5 video -->
